[feat]: [CDS-87006]: Added ResponseBody For Delete Also, and Improvised the code (#182)
