# 136-git-sync-manager/src/main/java/io/harness/gitsync/gitxwebhooks/dtos/DeleteGitXWebhookResponseDTO.java
@@ -25,4 +25,5 @@ import lombok.experimental.FieldDefaults;
 @OwnedBy(HarnessTeam.PIPELINE)
 public class DeleteGitXWebhookResponseDTO {
   boolean successfullyDeleted;
+  String webhookIdentifier;
 }
